# clipboard-history

./: ARCHITECTURE.md  CI_CD_SETUP.md  Cargo.toml  README.md  SEARCH_DEMO.md  demo_search.md  demo_search.sh  local_ci_check.bat  local_ci_check.sh  test_history.json
.github/workflows/: ci.yml  dev.yml  rust.yml  test-only.yml
src/: clipboard_item.rs  clipboard_manager.rs  lib.rs  main.rs  monitor.rs  popup_ui.rs  service.rs  storage.rs  ui.rs
tests/: clipboard_item_tests.rs  clipboard_manager_tests.rs  service_tests.rs
