[package]
name = "clipboard-history"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
