[package]
name = "clipboard-history"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = { version = "3.4", features = ["image-data"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
dirs = "5.0"
fuzzy-matcher = "0.3"
image = { version = "0.25", features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
